<resources>
    <string name="app_name">Movies</string>
    <string name="series">Series</string>
    <string name="no_title">Name not defined</string>
    <string name="no_overview">This movie has no overview</string>
    <string name="no_homepage">Homepage not define</string>
    <string name="no_budget">unannounced budget</string>
    <string name="release">Release date:</string>
    <string name="duration">Duration:</string>
    <string name="summary">Summary</string>
    <string name="genres">Genres:</string>
    <string name="rating">Rating</string>
    <string name="popularity">Popularity:</string>
    <string name="vote_count">Vote count:</string>
    <string name="vote_average">Vote average:</string>
    <string name="companies">Production companies:</string>
    <string name="overview">Overview</string>
    <string name="seasons">Seasons:</string>
    <string name="created_by">Created by:</string>
    <string name="first_date">First air date:</string>
    <string name="popular_series">Popular Tv Series</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="top_rated_series">Top Rated Series</string>
    <string name="upcoming_movies">Upcoming Movies</string>
</resources>
