<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="m"
            type="com.tombe.yesid.example.movies.model.Movie" />
        <variable
            name="gen"
            type="String"/>
        <variable
            name="com"
            type="String"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/release"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/summary" />

                <TextView
                    android:id="@+id/txtRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{m.release_date}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/release"
                    app:layout_constraintStart_toEndOf="@+id/release"
                    tools:text="2016/8/25" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/duration"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/release" />

                <TextView
                    android:id="@+id/txtDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text='@{m.runtime + " min"}'
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/duration"
                    app:layout_constraintStart_toEndOf="@+id/duration"
                    tools:text="120 min" />

                <TextView
                    android:id="@+id/txtLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{m.original_language}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/summary"
                    tools:text="ES" />

                <ImageView
                    android:id="@+id/imgLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtLanguage"
                    app:layout_constraintEnd_toStartOf="@+id/txtLanguage"
                    app:layout_constraintTop_toTopOf="@+id/txtLanguage"
                    app:srcCompat="@drawable/ic_language" />

                <ImageView
                    android:id="@+id/imgMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/txtMoney"
                    app:layout_constraintEnd_toStartOf="@+id/txtMoney"
                    app:layout_constraintTop_toTopOf="@+id/txtMoney"
                    app:srcCompat="@drawable/ic_money" />

                <TextView
                    android:id="@+id/txtMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text='@{m.budget == 0 ? @string/no_budget : m.budget + " USD"}'
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtLanguage"
                    tools:text="250000 USD" />

                <TextView
                    android:id="@+id/genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/genres"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/duration" />

                <TextView
                    android:id="@+id/txtGenres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{gen}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/genres"
                    app:layout_constraintStart_toEndOf="@+id/genres"
                    tools:text="Drama, Action, Comedy" />

                <TextView
                    android:id="@+id/companies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/companies"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/genres" />

                <TextView
                    android:id="@+id/txtCompanies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@{com}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/companies"
                    app:layout_constraintTop_toTopOf="@+id/companies"
                    tools:text="Fox 2000 Pictures" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/rating"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtPopularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text='@{m.popularity + ""}'
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/popularity"
                    app:layout_constraintStart_toEndOf="@+id/popularity"
                    tools:text="0.5" />

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/popularity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rating" />

                <TextView
                    android:id="@+id/voteCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/vote_count"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popularity" />

                <TextView
                    android:id="@+id/txtVoteCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text='@{m.vote_count + ""}'
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/voteCount"
                    app:layout_constraintStart_toEndOf="@+id/voteCount"
                    tools:text="624" />

                <TextView
                    android:id="@+id/voteAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/vote_average"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/voteCount" />

                <TextView
                    android:id="@+id/txtVoteAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text='@{m.vote_average + ""}'
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/voteAverage"
                    app:layout_constraintStart_toEndOf="@+id/voteAverage"
                    tools:text="7.8" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/overview"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtOverview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{m.overview ?? @string/no_overview}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/imgBg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overview"
                    tools:text='A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground \"fight clubs\" forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion.' />

                <TextView
                    android:id="@+id/homepage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@{m.homepage ?? @string/no_homepage}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtOverview"
                    tools:text="www.joker.com" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>